# cmake-cpp

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  lib.cpp
